# umbreon

./: .env-example  config.toml  pyproject.toml
.github/workflows/: actions.yml
res/: dadjokes.txt
src/: bot.py  launcher.py  main.py
src/cogs/: error.py  example.py  fun.py  help.py  jeopardy.py  moderation.py  simple.py
src/config/: config.toml
